add basic programs page

--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -42,6 +42,7 @@
             <ul class="nav nav-pills flex-column mb-auto mx-auto mx-sm-0" id="menu">
               {{ sbitem("Home", "/", "house") }}
               {{ sbitem("Problems", "/problems", "boxes") }}
+              {{ sbitem("Programs", "/programs", "file-earmark-code") }}
               {% if user.is_admin %}
               <hr>
               {{ sbitem("Users", "/admin/users", "person") }}
