add link to base

--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -43,6 +43,7 @@
               {{ sbitem("Home", "/", "house") }}
               {{ sbitem("Problems", "/problems", "boxes") }}
               {{ sbitem("Programs", "/programs", "file-earmark-code") }}
+              {{ sbitem("Documentation", "/documentation", "journal-text") }}
               {% if user.is_admin %}
               <hr>
               {{ sbitem("Users", "/admin/users", "person") }}
