--- a/algobattle_web/templates/documentation.jinja
+++ b/algobattle_web/templates/documentation.jinja
@@ -6,6 +6,7 @@
   const problems = {{problems | tojson}}
   const teams = {{teams | tojson}}
   const docs = {{docs | tojson}}
+  const user_team = {{user_team | tojson}}
 </script>
 
 
@@ -17,7 +18,7 @@
       </button>
     </h2>
     <div :id="'collapse' + problem.name" class="accordion-collapse collapse" :aria-labelledby="'heading' + problem.name" data-bs-parent="#problems">
-      <form class="accordion-body">
+      <form class="accordion-body" @submit.prevent="upload">
         <table class="table">
           <thead>
             <tr>
@@ -27,6 +28,15 @@
             </tr>
           </thead>
           <tbody>
+            <tr v-if="!doc(store.user_team.id)">
+                <td>${store.user_team.name}</td>
+                <td>
+                  <input class="e-em form-control form-control-sm" name="file" type="file" required="required">
+                </td>
+                <td>
+                  <button type="submit" class="btn btn-primary" data-bs-toggle="tooltip" title="Upload">Upload</button>
+                </td>
+            </tr>
             <tr v-for="(team, id) in store.teams">
               <div v-if="doc(id)">
                 <td>${team.name}</td>
