--- a/algobattle_web/templates/documentation.jinja
+++ b/algobattle_web/templates/documentation.jinja
@@ -37,8 +37,8 @@
                   <button type="submit" class="btn btn-primary" data-bs-toggle="tooltip" title="Upload">Upload</button>
                 </td>
             </tr>
-            <tr v-for="(team, id) in store.teams">
-              <div v-if="doc(id)">
+            <template v-for="(team, id) in store.teams">
+              <tr v-if="doc(id)">
                 <td>${team.name}</td>
                 <td>
                   <a role="button" class="btn btn-primary btn-sm" :href="'/api/documentation/getfile/'+doc(id).id" data-bs-toggle="tooltip" title="Download file">${doc(id).file.name} <i class="bi bi-download ms-1"></i></a>
@@ -46,8 +46,8 @@
                 <td>
                   <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete" @click="remove(id)"><i class="bi bi-trash"></i></button>
                 </td>
-              </div>
-            </tr>
+              </tr>
+            </template>
           </tbody>
         </table>
       </form>
