fix upload button size

--- a/algobattle_web/templates/documentation.jinja
+++ b/algobattle_web/templates/documentation.jinja
@@ -34,7 +34,7 @@
                   <input class="e-em form-control form-control-sm" name="file" type="file" required="required">
                 </td>
                 <td>
-                  <button type="submit" class="btn btn-primary" data-bs-toggle="tooltip" title="Upload">Upload</button>
+                  <button type="submit" class="btn btn-sm btn-primary" data-bs-toggle="tooltip" title="Upload">Upload</button>
                 </td>
             </tr>
             <template v-for="(team, id) in store.teams">
