fix upload widfth

--- a/algobattle_web/templates/documentation.jinja
+++ b/algobattle_web/templates/documentation.jinja
@@ -31,7 +31,7 @@
             <tr v-if="!doc(store.user_team.id)">
                 <td>${store.user_team.name}</td>
                 <td>
-                  <input class="e-em form-control form-control-sm" name="file" type="file" required="required">
+                  <input class="w-em form-control form-control-sm" name="file" type="file" required="required">
                 </td>
                 <td>
                   <button type="submit" class="btn btn-sm btn-primary" data-bs-toggle="tooltip" title="Upload">Upload</button>
