--- a/algobattle_web/templates/documentation.jinja
+++ b/algobattle_web/templates/documentation.jinja
@@ -40,7 +40,7 @@
             <tr v-for="(doc, team_id) in store.docs[problem.id]">
               <td>${store.teams[team_id].name}</td>
               <td>
-                <input v-if="editing" class="e-em form-control form-control-sm" name="file" type="file" required="required">
+                <input v-if="editing" class="w-em form-control form-control-sm" name="file" type="file" required="required">
                 <a v-else role="button" class="btn btn-primary btn-sm" :href="'/api/documentation/getfile/'+doc.id" data-bs-toggle="tooltip" title="Download file">${doc.file.name} <i class="bi bi-download ms-1"></i></a>
               </td>
               <td class="text-end">
