--- a/algobattle_web/templates/documentation.jinja
+++ b/algobattle_web/templates/documentation.jinja
@@ -63,7 +63,16 @@
     <td>${problem.name}</td>
     <td>
       <input v-if="editing" class="e-em form-control form-control-sm" name="file" type="file">
-      <a v-else role="button" class="btn btn-primary btn-sm" :href="'/api/documentation/getfile/'+docs[problem.id].id" data-bs-toggle="tooltip" title="Download config file">${docs[problem.id].file.name} <i class="bi bi-download ms-1"></i></a>
+      <a v-else-if="store.docs[problem.id]" role="button" class="btn btn-primary btn-sm" :href="'/api/documentation/getfile/'+store.docs[problem.id]?.id" data-bs-toggle="tooltip" title="Download config file">
+        ${store.docs[problem.id]?.file.name} <i class="bi bi-download ms-1"></i>
+      </a>
+    </td>
+    <td class="text-end">
+      <div class="btn-group btn-group-sm" role="group">
+        <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete team" v-if="editing" @click="remove(doc)"><i class="bi bi-trash"></i></button>
+        <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit team" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
+        <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
+      </div>
     </td>
   </tr>
 </script>
@@ -76,7 +85,7 @@
   </div>
   {% else %}
   <form>
-    <table>
+    <table class="table w-xs">
       <thead>
         <tr>
           <th scope="col">Problem</th>
