--- a/algobattle_web/templates/documentation.jinja
+++ b/algobattle_web/templates/documentation.jinja
@@ -69,7 +69,7 @@
     </td>
     <td class="text-end">
       <div class="btn-group btn-group-sm" role="group">
-        <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete team" v-if="editing" @click="remove(doc)"><i class="bi bi-trash"></i></button>
+        <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete team" v-if="editing" @click="remove(problem)"><i class="bi bi-trash"></i></button>
         <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit team" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
         <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
       </div>
@@ -84,7 +84,7 @@
     <Problem v-for="(problem, id) in store.problems" :key="id" :problem="problem"></Problem>
   </div>
   {% else %}
-  <form>
+  <form @submit.prevent="upload">
     <table class="table w-xs">
       <thead>
         <tr>
