--- a/algobattle_web/templates/documentation.jinja
+++ b/algobattle_web/templates/documentation.jinja
@@ -29,25 +29,28 @@
           </thead>
           <tbody>
             <tr v-if="!(store.user_team.id in store.docs[problem.id])">
-                <td>${store.user_team.name}</td>
-                <td>
-                  <input class="w-em form-control form-control-sm" name="file" type="file" required="required">
-                </td>
-                <td>
-                  <button type="submit" class="btn btn-sm btn-primary" data-bs-toggle="tooltip" title="Upload">Upload</button>
-                </td>
+              <td>${store.user_team.name}</td>
+              <td>
+                <input v-if="editing == store.user_team.id" class="w-em form-control form-control-sm" name="file" type="file" required="required">
+              </td>
+              <td class="text-end">
+                <div class="btn-group btn-group-sm" role="group">
+                  <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit docs" @click="toggle_editing(store.user_team.id)"><i class="bi bi-pencil"></i></button>
+                  <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing == store.user_team.id"><i class="bi bi-check2"></i></button>
+                </div>
+              </td>
             </tr>
             <tr v-for="(doc, team_id) in store.docs[problem.id]">
               <td>${store.teams[team_id].name}</td>
               <td>
-                <input v-if="editing" class="w-em form-control form-control-sm" name="file" type="file" required="required">
+                <input v-if="editing == team_id" class="w-em form-control form-control-sm" name="file" type="file" required="required">
                 <a v-else role="button" class="btn btn-primary btn-sm" :href="'/api/documentation/getfile/'+doc.id" data-bs-toggle="tooltip" title="Download file">${doc.file.name} <i class="bi bi-download ms-1"></i></a>
               </td>
               <td class="text-end">
                 <div class="btn-group btn-group-sm" role="group">
-                  <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete team" v-if="editing" @click="remove(doc)"><i class="bi bi-trash"></i></button>
-                  <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit team" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
-                  <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
+                  <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete docs" v-if="editing == team_id" @click="remove(doc)"><i class="bi bi-trash"></i></button>
+                  <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit docs" @click="toggle_editing(team_id)"><i class="bi bi-pencil"></i></button>
+                  <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing == team_id"><i class="bi bi-check2"></i></button>
                 </div>
               </td>
             </tr>
@@ -69,8 +72,8 @@
     </td>
     <td class="text-end">
       <div class="btn-group btn-group-sm" role="group">
-        <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete team" v-if="editing" @click="remove(problem)"><i class="bi bi-trash"></i></button>
-        <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit team" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
+        <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete docs" v-if="editing" @click="remove(problem)"><i class="bi bi-trash"></i></button>
+        <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit docs" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
         <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
       </div>
     </td>
