add basic schedule page

--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -44,6 +44,7 @@
               {{ sbitem("Problems", "/problems", "boxes") }}
               {{ sbitem("Programs", "/programs", "file-earmark-code") }}
               {{ sbitem("Documentation", "/documentation", "journal-text") }}
+              {{ sbitem("Schedule", "/schedule", "calendar-week") }}
               {% if user.is_admin %}
               <hr>
               {{ sbitem("Users", "/admin/users", "person") }}
