--- a/algobattle_web/templates/schedule.jinja
+++ b/algobattle_web/templates/schedule.jinja
@@ -1,106 +1,180 @@
 {% extends "base.jinja" %}
 {% block content %}
 
-<script src="/static/scripts/documentation.js" type="module"></script>
+<script src="/static/scripts/schedule.js" type="module"></script>
 <script>
+  const schedules = {{schedules | tojson}}
   const problems = {{problems | tojson}}
   const teams = {{teams | tojson}}
-  const docs = {{docs | tojson}}
-  const user_team = {{user_team | tojson}}
+  const configs = {{configs | tojson}}
+  const programs = {{programs | tojson}}
 </script>
 
 
-<script type="text/x-template" id="problem">
+<script type="text/x-template" id="schedule">
   <div class="accordion-item">
-    <h2 class="accordion-header" :id="'heading' + problem.name">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" :data-bs-target="'#collapse' + problem.name" aria-expanded="false" :aria-controls="'collapse' + problem.name">
-        ${problem.name}
+    <h2 class="accordion-header" :id="'heading' + schedule.id">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" :data-bs-target="'#collapse' + schedule.id" aria-expanded="false" :aria-controls="'collapse' + schedule.name">
+        ${schedule.name}
       </button>
     </h2>
-    <div :id="'collapse' + problem.name" class="accordion-collapse collapse" :aria-labelledby="'heading' + problem.name" data-bs-parent="#problems">
-      <form class="accordion-body" @submit.prevent="upload">
+    <div :id="'collapse' + schedule.id" class="accordion-collapse collapse" :aria-labelledby="'heading' + schedule.id" data-bs-parent="#schedules">
+      <form class="accordion-body" @submit.prevent="edit">
         <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Team</th>
-              <th scope="col">Documentation</th>
-              <th scope="col"></th>
-            </tr>
-          </thead>
           <tbody>
-            <tr v-if="!(store.user_team.id in store.docs[problem.id])">
-              <td>${store.user_team.name}</td>
+            <tr v-if="editing">
+              <td>Name</td>
               <td>
-                <input v-if="editing == store.user_team.id" class="w-em form-control form-control-sm" name="file" type="file" required="required">
+                <input v-if="editing" class="w-em form-control form-control-sm" name="name" type="text" v-model="schedule.name">
               </td>
-              <td class="text-end">
-                <div class="btn-group btn-group-sm" role="group">
-                  <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit docs" @click="toggle_editing(store.user_team.id)"><i class="bi bi-pencil"></i></button>
-                  <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing == store.user_team.id"><i class="bi bi-check2"></i></button>
+            </tr>
+            <tr>
+              <td>Time</td>
+              <td>
+                <input v-if="editing" class="w-em form-control form-control-sm" name="time" type="datetime-local" v-model="schedule.time">
+                <div v-else>${fmt_date(schedule.time)}</div>
+              </td>
+            </tr>
+            <tr>
+              <td>Problem</td>
+              <td>
+                <select v-if="editing" class="form-select form-select-sm" name="problem" v-model="schedule.problem">
+                  <option v-for="(problem, id) in store.problems" :value="id" :selected="id == schedule.problem">${problem.name}</option>
+                </select>
+                <div v-else>${store.problems[schedule.problem].name}</div>
+              </td>
+            </tr>
+            <tr>
+              <td>Config</td>
+              <td>
+                <select v-if="editing" class="form-select form-select-sm" name="config" v-model="schedule.config">
+                  <option :value="undefined" :selected="schedule.config == undefined">Same as problem</option>
+                  <option v-for="(config, id) in store.configs" :value="id" :selected="id == schedule.config">${config.name}</option>
+                </select>
+                <div v-else>
+                  ${schedule.config ? store.configs[schedule.config].name : store.configs[schedule.problem.config].name}
                 </div>
               </td>
             </tr>
-            <tr v-for="(doc, team_id) in store.docs[problem.id]">
-              <td>${store.teams[team_id].name}</td>
+            <tr>
+              <td>Participants</td>
               <td>
-                <input v-if="editing == team_id" class="w-em form-control form-control-sm" name="file" type="file" required="required">
-                <a v-else role="button" class="btn btn-primary btn-sm" :href="'/api/documentation/getfile/'+doc.id" data-bs-toggle="tooltip" title="Download file">${doc.file.name} <i class="bi bi-download ms-1"></i></a>
+                <div>${participants_str}</div>
               </td>
-              <td class="text-end">
-                <div class="btn-group btn-group-sm" role="group">
-                  <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete docs" v-if="editing == team_id" @click="remove(doc)"><i class="bi bi-trash"></i></button>
-                  <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit docs" @click="toggle_editing(team_id)"><i class="bi bi-pencil"></i></button>
-                  <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing == team_id"><i class="bi bi-check2"></i></button>
-                </div>
+            </tr>
+            <tr>
+              <td>Points</td>
+              <td>
+                <input v-if="editing" class="w-em form-control form-control-sm" name="points" type="number" min="0" v-model="schedule.points">
+                <div v-else>${fmt_date(schedule.time)}</div>
               </td>
             </tr>
           </tbody>
         </table>
+        {% if user.is_admin %}
+        <div class="btn-group btn-group-sm" role="group">
+          <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete" v-if="editing" @click="remove"><i class="bi bi-trash"></i></button>
+          <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
+          <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
+        </div>
+        {% endif %}
       </form>
     </div>
   </div>
 </script>
 
-<script type="text/x-template" id="problem_row">
-  <tr>
-    <td>${problem.name}</td>
-    <td>
-      <input v-if="editing" class="e-em form-control form-control-sm" name="file" type="file">
-      <a v-else-if="store.docs[problem.id]" role="button" class="btn btn-primary btn-sm" :href="'/api/documentation/getfile/'+store.docs[problem.id]?.id" data-bs-toggle="tooltip" title="Download config file">
-        ${store.docs[problem.id].file.name} <i class="bi bi-download ms-1"></i>
-      </a>
-    </td>
-    <td class="text-end">
-      <div class="btn-group btn-group-sm" role="group">
-        <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete docs" v-if="editing" @click="remove(problem)"><i class="bi bi-trash"></i></button>
-        <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit docs" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
-        <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
-      </div>
-    </td>
-  </tr>
-</script>
-
 <div id="app">
-  <h3>Documentation</h3>
+  <h3>Schedule</h3>
+  <div class="accordion" id="schedules">
+    <Schedule v-for="(schedule, id) in store.schedules" :key="id" :schedule="schedule"></Schedule>
   {% if user.is_admin %}
-  <div class="accordion" id="problems">
-    <Problem v-for="(problem, id) in store.problems" :key="id" :problem="problem"></Problem>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="heading_new">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_new" aria-expanded="false" aria-controls="collapse_new">
+        Schedule a new match
+      </button>
+    </h2>
+    <div id="collapse_new" class="accordion-collapse collapse" aria-labelledby="heading_new" data-bs-parent="#schedules">
+      <form class="accordion-body" @submit.prevent="create">
+        <table class="table">
+          <tbody>
+            <tr>
+              <td>Name</td>
+              <td>
+                <input class="w-em form-control form-control-sm" name="name" type="text" v-model="new_schedule.name">
+              </td>
+            </tr>
+            <tr>
+              <td>Time</td>
+              <td>
+                <input class="w-em form-control form-control-sm" name="time" type="datetime-local" v-model="new_schedule.time" required="required">
+              </td>
+            </tr>
+            <tr>
+              <td>Problem</td>
+              <td>
+                <select class="form-select form-select-sm w-em" name="problem" v-model="new_schedule.problem" required="required">
+                  <option v-for="(problem, id) in store.problems" :value="id" :selected="id == new_schedule.problem">${problem.name}</option>
+                </select>
+              </td>
+            </tr>
+            <tr>
+              <td>Config</td>
+              <td>
+                <select class="form-select form-select-sm w-em" name="config" v-model="new_schedule.config" required="required">
+                  <option :value="undefined" :selected="new_schedule.config == undefined">Same as problem</option>
+                  <option v-for="(config, id) in store.configs" :value="id" :selected="id == new_schedule.config">${config.name}</option>
+                </select>
+              </td>
+            </tr>
+            <tr>
+              <td>Points</td>
+              <td>
+                <input class="w-em form-control form-control-sm" name="points" type="number" min="0" v-model="new_schedule.points" required="required">
+              </td>
+            </tr>
+            <tr>
+              <td>Participants</td>
+              <td>
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col">Team</th>
+                      <th scope="col">Generator</th>
+                      <th scope="col">Solver</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr v-for="participant in new_schedule.participants">
+                      <td>
+                        <select class="form-select form-select-sm w-em" name="team" v-model="participant.team" required="required">
+                          <option v-for="(team, id) in store.teams" :value="id" :selected="id == participant.team">${team.name}</option>
+                        </select>
+                      </td>
+                      <td>
+                        <select class="form-select form-select-sm w-em" name="generator" v-model="participant.generator">
+                          <option value="team_spec" :selected="participant.generator == 'team_spec'">Specified by team</option>
+                          <option v-for="(program, id) in store.programs[participant.team]?.generators" :value="id" :selected="id == participant.generator">${program.name}</option>
+                        </select>
+                      </td>
+                      <td>
+                        <select class="form-select form-select-sm w-em" name="solver" v-model="participant.solver">
+                          <option value="team_spec" :selected="participant.generator == 'team_spec'">Specified by team</option>
+                          <option v-for="(program, id) in store.programs[participant.team]?.solvers" :value="id" :selected="id == participant.solver">${program.name}</option>
+                        </select>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                <button type="button" class="btn btn-success btn-sm" data-bs-toggle="tooltip" title="Add participant" @click="add_participant"><i class="bi bi-plus-lg"></i></button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+          <button type="submit" class="btn btn-success mt-3">Submit</button>
+      </form>
+    </div>
   </div>
-  {% else %}
-  <form @submit.prevent="upload">
-    <table class="table w-xs">
-      <thead>
-        <tr>
-          <th scope="col">Problem</th>
-          <th scope="col">Documentation</th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr is="vue:problem-row" v-for="(problem, id) in store.problems" :key="id" :problem="problem"></tr>
-      </tbody>
-    </table>
-  </form>
   {% endif %}
 </div>
 
