--- a/algobattle_web/templates/schedule.jinja
+++ b/algobattle_web/templates/schedule.jinja
@@ -66,7 +66,7 @@
               <td>Points</td>
               <td>
                 <input v-if="editing" class="w-em form-control form-control-sm" name="points" type="number" min="0" v-model="schedule.points">
-                <div v-else>${fmt_date(schedule.time)}</div>
+                <div v-else>${schedule.points}</div>
               </td>
             </tr>
           </tbody>
