sligthly nicer UI

--- a/algobattle_web/templates/schedule.jinja
+++ b/algobattle_web/templates/schedule.jinja
@@ -90,7 +90,7 @@
   {% if user.is_admin %}
   <div class="accordion-item">
     <h2 class="accordion-header" id="heading_new">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_new" aria-expanded="false" aria-controls="collapse_new">
+      <button class="accordion-button collapsed bg-success bg-opacity-25" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_new" aria-expanded="false" aria-controls="collapse_new">
         Schedule a new match
       </button>
     </h2>
@@ -171,7 +171,7 @@
             </tr>
           </tbody>
         </table>
-          <button type="submit" class="btn btn-success mt-3">Submit</button>
+          <button type="submit" class="btn btn-success mt-3">Create</button>
       </form>
     </div>
   </div>
