--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -45,6 +45,7 @@
               {{ sbitem("Programs", "/programs", "file-earmark-code") }}
               {{ sbitem("Documentation", "/documentation", "journal-text") }}
               {{ sbitem("Schedule", "/schedule", "calendar-week") }}
+              {{ sbitem("Results", "/results", "bar-chart-line") }}
               {% if user.is_admin %}
               <hr>
               {{ sbitem("Users", "/admin/users", "person") }}
