--- a/algobattle_web/templates/results.jinja
+++ b/algobattle_web/templates/results.jinja
@@ -31,13 +31,13 @@
           <tr>
             <td>Logs</td>
             <td>
-              <button class="btn btn-primary btn-sm" :href="'/api/results/logs/'+result.id" data-bs-toggle="tooltip" title="Download logs">${result.logs.name} <i class="bi bi-download ms-1"></i><button>
+              <a role="button" v-if="result.logs" class="btn btn-primary btn-sm" :href="'/api/result/logs/'+result.id" data-bs-toggle="tooltip" title="Download logs">${result.logs.name} <i class="bi bi-download ms-1"></i></a>
             </td>
           </tr>
           <tr>
             <td>Participants</td>
             <td>
-              <table>
+              <table class="table">
                 <thead>
                   <tr>
                     <th scope="col">Team</th>
@@ -49,8 +49,8 @@
                 <tbody>
                   <tr v-for="participant in result.participants">
                     <td>${store.teams[participant.team].name}</td>
-                    <td>${store.program[participant.generator].name}</td>
-                    <td>${store.program[participant.solver].name}</td>
+                    <td>${store.programs[participant.generator].name}</td>
+                    <td>${store.programs[participant.solver].name}</td>
                     <td>${participant.points}</td>
                   </tr>
                 </tbody>
