--- a/algobattle_web/templates/documentation.jinja
+++ b/algobattle_web/templates/documentation.jinja
@@ -44,7 +44,7 @@
               <td>${store.teams[team_id].name}</td>
               <td>
                 <input v-if="editing == team_id" class="w-em form-control form-control-sm" name="file" type="file" required="required">
-                <a v-else role="button" class="btn btn-primary btn-sm" :href="'/api/documentation/getfile/'+doc.id" data-bs-toggle="tooltip" title="Download file">${doc.file.name} <i class="bi bi-download ms-1"></i></a>
+                <a v-else role="button" class="btn btn-primary btn-sm" :href="`/api/documentation/${doc.id}/getfile/`" data-bs-toggle="tooltip" title="Download file">${doc.file.name} <i class="bi bi-download ms-1"></i></a>
               </td>
               <td class="text-end">
                 <div class="btn-group btn-group-sm" role="group">
