--- a/algobattle_web/templates/admin_users.jinja
+++ b/algobattle_web/templates/admin_users.jinja
@@ -31,8 +31,8 @@
     <td class="text-end">
       <div class="btn-group btn-group-sm" role="group">
         <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete user" v-if="editing && user.id != '{{user.id}}'" @click="delete_user"><i class="bi bi-trash"></i></button>
-        <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit user" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
-        <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
+        <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit user" @click="editing = !editing"><i class="bi bi-pencil"></i></button>
+        <button type="button" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" @click="edit_user" v-if="editing"><i class="bi bi-check2"></i></button>
       </div>
     </td>
   </tr>
