--- a/algobattle_web/templates/admin_users.jinja
+++ b/algobattle_web/templates/admin_users.jinja
@@ -79,11 +79,11 @@
   <div class="accordion w-xs" id="filtersAccordion">
     <div class="accordion-item">
       <h2 class="accordion-header" id="filterHeading">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#filters" aria-expanded="false" aria-controls="filters">
+        <button class="accordion-button" :class="{ collapsed: !has_params }" type="button" data-bs-toggle="collapse" data-bs-target="#filters" aria-expanded="false" aria-controls="filters">
           Filter
         </button>
       </h2>
-      <div id="filters" class="accordion-collapse collapse p-3" aria-labelledby="filterHeading" data-bs-parent="#filtersAccordion">
+      <div id="filters" class="accordion-collapse collapse p-3" :class="{ show: has_params }" aria-labelledby="filterHeading" data-bs-parent="#filtersAccordion">
         <label for="nameFilter" class="form-label">Name</label>
         <input class="form-control w-em" id="nameFilter" type="text" v-model="filter.name">
         <label for="emailFilter" class="form-label mt-3">Email</label>
