--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -30,9 +30,9 @@
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <div class="container-xxl">
+    <div>
       <div class="row">
-        <div class="col-2 px-0">
+        <div class="col-2">
           <div class="position-fixed vh-100 d-flex flex-column py-3 px-sm-3 bg-light-subtle flex-fill flex-grow-1">
             <a href="/" class="d-flex align-items-center mb-md-0 me-md-auto text-white text-decoration-none">
               <span class="fs-4 d-none d-sm-inline">Algobattle</span>
