--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -1,7 +1,7 @@
 {% macro sbitem(name, link, icon) %}
-  <li class="nav-item">
-    <a href="{{ link }}" class="nav-link align-middle {{'active' if request.url.path == link}}">
-      <i class="bi bi-{{ icon }}"></i> <span class="ms-1 d-none d-sm-inline">{{ name }}</span>
+  <li class="nav-item mx-2">
+    <a href="{{ link }}" class="nav-link align-middle {{'active' if request.url.path == link}}" {{ "aria-current" if request.url.path == link }}>
+      <i class="bi bi-{{ icon }}"></i> <span class="ms-1">{{ name }}</span>
     </a>
   </li>
 {%- endmacro %}
@@ -30,60 +30,55 @@
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <div>
-      <div class="row">
-        <div class="col-2">
-          <div class="position-fixed vh-100 d-flex flex-column py-3 px-sm-3 bg-light-subtle flex-fill flex-grow-1">
-            <a href="/" class="d-flex align-items-center mb-md-0 me-md-auto text-white text-decoration-none">
-              <span class="fs-4 d-none d-sm-inline">Algobattle</span>
-            </a>
-            {% if user %}
-            <hr class="d-none d-sm-inline">
-            <ul class="nav nav-pills flex-column mb-auto mx-auto mx-sm-0" id="menu">
-              {{ sbitem("Home", "/", "house") }}
-              {{ sbitem("Problems", "/problems", "boxes") }}
-              {{ sbitem("Programs", "/programs", "file-earmark-code") }}
-              {{ sbitem("Documentation", "/documentation", "journal-text") }}
-              {{ sbitem("Schedule", "/schedule", "calendar-week") }}
-              {{ sbitem("Results", "/results", "bar-chart-line") }}
-              {% if user.is_admin %}
-              <hr>
-              {{ sbitem("Users", "/admin/users", "person") }}
-              {{ sbitem("Teams", "/admin/teams", "people") }}
-              {{ sbitem("Configs", "/admin/configs", "sliders") }}
-              {% endif %}
-            </ul>
-            <hr class="d-none d-sm-inline">
-            <div class="dropup px-3 p-sm-0 btn">
-              <a class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="bi bi-person-circle me-2"></i> <strong class="d-none d-sm-inline">{{user.name}}</strong>
-              </a>
-              <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-                {% if user.teams %}
-                <li>
-                  <a class="dropdown-item" href="/team">Team</a>
-                </li>
-                {% endif %}
-                <li><a class="dropdown-item" href="/user">User</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li>
-                  <form action="/logout" method="post">
-                    <button class="dropdown-item" type="submit" name="LogoutButton" value="test">Log out</button>
-                  </form>
-                </li>
-              </ul>
-            </div>
+    <nav class="navbar navbar-expand-md sticky-top bg-primary-subtle">
+      <div class="container-xxl">
+        <a href="/" class="navbar-brand">
+          <span class="fs-4">Algobattle</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          {% if user %}
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-pills">
+            {{ sbitem("Problems", "/problems", "boxes") }}
+            {{ sbitem("Programs", "/programs", "file-earmark-code") }}
+            {{ sbitem("Documentation", "/documentation", "journal-text") }}
+            {{ sbitem("Schedule", "/schedule", "calendar-week") }}
+            {{ sbitem("Results", "/results", "bar-chart-line") }}
+            {% if user.is_admin %}
+            <hr>
+            {{ sbitem("Users", "/admin/users", "person") }}
+            {{ sbitem("Teams", "/admin/teams", "people") }}
+            {{ sbitem("Configs", "/admin/configs", "sliders") }}
             {% endif %}
+          </ul>
+
+          <div class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="bi bi-person-circle me-2"></i> <strong>{{user.name}}</strong>
+            </a>
+            <ul class="dropdown-menu">
+              {% if user.teams %}
+              <li><a class="dropdown-item" href="/team">Team</a></li>
+              {% endif %}
+              <li><a class="dropdown-item" href="/user">User</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li>
+                <form action="/logout" method="post">
+                  <button class="dropdown-item" type="submit" name="LogoutButton" value="test">Log out</button>
+                </form>
+              </li>
+            </ul>
           </div>
-          <div class="flex-fill"></div>
-        </div>
-        <div class="col-10 p-5">
-          {% block content %}
-          {% endblock %}
+          {% endif %}
+        
         </div>
       </div>
+    </nav>
+    <div class="container-xxl p-5">
+      {% block content %}
+      {% endblock %}
     </div>
     <script>
       /*addEventListener("DOMContentLoaded", (event) => {
